# clangd-issue-682

./: CMakeLists.txt  README.md  apps-and-packs.code-workspace
app1/: CMakeLists.txt
app1/inc/: main.h
app2/: CMakeLists.txt
app2/src/: main.c
pack-div@1.0.0/src/: div.c
pack-div@2.0.0/inc/: div.h
pack-div@2.0.0/src/: div.c
